decksite/static/css/pd.css
/* ... */
main table a:hover, main h1 a:hover, main h2 a:hover, main h3 a:hover, main li a:hover, .decklist a:hover {
    background-color: transparent;
}

/* Mark links that go off-site. */
a.external:after {
    background: none;
    content: "﻿↑";
    font-size: 0.75rem;
    position: relative;
    text-decoration: none; /* Although this is a link we don't want the external indicator underlined. */
    text-indent: 0; /* Don't inherit from parent and apply again. */
    text-shadow: none;
    top: -0.6em;
    white-space: pre-wrap;
}

/*

Lists

Our standard lists use a bullet in the left margin.
Text continues to line up with text above/below.

*/

main ul {
    list-style-type: disc;
    padding-left: 2em;
}

ul.decklist {
    list-style-type: none;
    margin: 0;
    padding-left: 0;
    line-height: 1;
    font-size: 0.75rem;
}

/*

Tables

Our tables are constrained to a single line, allow no column to become very large and will clip overflow with an elipsis.
We make occasional use of space in the margin to the left. This is called 'marginalia'.
We fade values that repeat from one row to the next. Tables that do this are hidden until it is complete with the fade-repeats class.

Sizes in the table are in ems because they should relate to the size of table text not the page base.

*/

table {
    border-spacing: 0.25em 0;
    font-size: 0.75rem;
    font-weight: 400;
    margin-bottom: 1em;
}

/* Turn off small caps link style in tables. */
table a {
    font-family: inherit;
    text-transform: none;
}

/* Turn off hover highlight in tables. */
table a:hover {
    background-color: transparent;
}

table.with-marginalia {
    margin-left: -4em; /* Width of .marginalia */
    margin-right: 0.5em;
}

table.fade-repeats {
    visibility: hidden;
}

th {
    cursor: pointer;
    font-family: heading-caps;
    font-size: 1em;
    text-align: left;
    text-transform: lowercase;
}

th, td {
    max-width: 13em;
    overflow: hidden;
    padding: 0.178em 0.563em;
    text-overflow: ellipsis;
    white-space: nowrap;
}

/* Allow elements in the margin to show. */
td.marginalia:first-child, th.marginalia:first-child {
    overflow: visible;
}

td:first-child, td:last-child, th:first-child, th:last-child {
    margin: 0;
    padding: 0;
}

td.c {
    text-align: center;
}

td.n {
    text-align: right;
}

tr.wide td, tr.wide th {
    padding-bottom: 0.5em;
    padding-top: 0.5em;
}

tr.wide+tr td {
    border-top: 0.05rem #999 solid;
}

tr.wide td.wide {
    padding-right: 1em;
    max-width: 50em;
    white-space: pre-line;
}

td.divider, th.divider {
    border-right: 0.07em solid #999;
}

th.legend {
    text-align: center;
}

.marginalia {
    line-height: 1;
    margin-left: -4em;
    margin-right: -0.5em;
    text-align: right;
    width: 4em;
}

.stars {
    font-size: 1.333rem; /* The stars are a bit small in our chosen font but the targets are not. */
}

.repeat:not(span), td .repeat {
    opacity: 0.8;
}

/*

Menu

The main menu consists of a handful of top-level items.
Ideally the number of top-level items will never exceed five.
Menu items can have submenus. These are "mega menus" that stretch across the whole screen and might contain more than just links.

*/

.menu li {
    float: left;
}

.menu li > a {
    display: block;
    padding: 2em; /* Matches negative margin of nav so when it aligns left (even wrapped under). */
    text-decoration: none;
    text-transform: lowercase;
}

.menu > li.search {
    float: right;
    padding: 1rem 0 0 0;
}

.menu a:hover {
    color: #999;
}

.menu:after {
    clear: both;
    content: "";
    display: table;
}

/* Submenu. */

.submenu-container {
    background: #502828;
    color: #f9f9f9;
    display: none;
    left: 0;
    padding: 0 10%; /* Left and right padding same as nav padding because this is position absolutely under the menu. */
    position: absolute;
    width: 80%; /* 100% - padding-left - padding-right */
}

.submenu-container a:hover {
    background-color: #502828;
    color: #999;
}

.submenu-container > ul {
    margin-left: -2rem; /* So that first item text lines up with the left edge of the page. */
}

/* Slide-out caret at top of submenu dropdown. */

/* The caret makes its containing menuitem have a weird outline shape when tabbing so hide outlines in the menu. */
a.menuitem {
    outline: none;
}

.has-submenu > a {
    position: relative; /* So we can position the caret relative to its menuitem. */
}

/* Create the caret as a border with opacity zero to hide it initially. */
.has-submenu > a:after {
    border-bottom: 1em solid #502828;
    border-left: 1.333em solid transparent;
    border-right: 1.333em solid transparent;
    content: "";
    display: block;
    height: 0;
    left: 50%;
    margin-left: -1.333em; /* Equal to border-left/border-right, to compenstate for *starting* at left 50% instead of centering there. */
    opacity: 0;
    position: absolute; /* Take the caret out of the flow so it doesn't push content below down. */
    top: 4.333em; /* menuitem[padding-top] + menuitem[padding-bottom] + (menuitem[line-height] * menuitem[font-size]) - translateY/border-bottom */
    transform: translateY(1em); /* [border-bottom] – In the hidden state the caret is pushed down by the height of the caret. */
    transition: all 0.1s ease-out; /* When we transition back to this state hide the caret quite quickly so you don't see the caret when the dropdown has gone. */
    width: 0;
    z-index: 1;
}

/* Show the caret on hover. */
.hovering > a:after {
    opacity: 1;
    transform: translateY(0); /* In the revealed state the caret is sitting inside the menuitem's padding. */
    transition: all 0.3s ease-out; /* Ease up when we transition to visible position in .hovering > a:after on hover. */
}

/*

Mana bar

We show the color composition of a deck with a horizontal bar made up of the colors of Magic as printed on cards in their mana symbols.

*/

.mana:nth-child(1) {
    border-left: 0.05rem solid #999;
}
/* ... */

